# ArcDB

./: Cargo.toml  Dockerfile  deployment.md  iso_iec_9075_standard_sql.sql
.github/workflows/: release.yml
clients/arcdb-jdbc/: build.gradle.kts  settings.gradle.kts
clients/arcdb-jdbc/src/main/kotlin/com/arcdb/jdbc/: ArcConnection.kt  ArcDriver.kt  ArcResultSet.kt  ArcStatement.kt
clients/arcdb-jdbc/src/test/kotlin/com/arcdb/jdbc/: JdbcTest.kt
clients/arcdb-nodejs/: package-lock.json  package.json
clients/arcdb-nodejs/src/: index.ts
src/: error.rs  lib.rs  main.rs
src/catalog/: catalog.rs  mod.rs  schema.rs  types.rs
src/executor/: executor.rs  mod.rs  optimizer.rs  planner.rs
src/server/: mod.rs
src/sql/: ast.rs  lexer.rs  mod.rs  parser.rs  token.rs
src/storage/: btree.rs  buffer_pool.rs  disk.rs  heap.rs  mod.rs  page.rs  table.rs  tuple.rs  wal.rs
src/transaction/: mod.rs  transaction.rs
tests/: test_transaction_lifecycle.rs
